src/components/layout.css
@import url('https://fonts.googleapis.com/css?family=Fira+Mono&display=swap');

body {
    margin: 0;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    background: #282c34;
    color: #abd0bc;
}

a, a:visited {
    color: inherit;
    text-decoration: none;
}

pre {
    background: #31363f;
    overflow-x: auto;
}

code {
    font-family: "Fira Mono", "SFMono-Regular", Consolas, "Roboto Mono",
    "Droid Sans Mono", "Liberation Mono", Menlo, Courier, monospace;
    line-height: 1.2em;
}

image {
    max-width: 100%;
    max-height: 100%;
}

